--- a/Django/CSUProjects/templates/index.html
+++ b/Django/CSUProjects/templates/index.html
@@ -103,13 +103,11 @@
 	<script type="text/javascript" src={% static "/src/JScripts/showSubscriptionForm.js" %} defer> </script>
     {% comment %} <script type="text/javascript" src={% static "/src/JScripts/CSULogo.js" %} defer></script> {% endcomment %}
 
-	<link rel="stylesheet" href={% static "/css/markingPages.css" %}>
+	{% comment %}<link rel="stylesheet" href={% static "/css/markingPages.css" %}> {% endcomment %}
 	<link rel="stylesheet" href={% static "/css/vortex.css" %}>
 	<link rel="stylesheet" href={% static "/css/blurContainer.css" %}>
 	<link rel="stylesheet" href={% static "/css/find.css" %}>
 	<link rel="stylesheet" href={% static "/css/fonts.css" %}>
-    <link rel="stylesheet" href={% static "/css/cards.css" %}>
-	<link rel="stylesheet" href={% static "/css/btn.css" %}>
 	<link rel="stylesheet" href={% static "/css/subscriptionForm.css" %}>
 
 {% endblock cssAndScripts %}
@@ -123,25 +121,32 @@
 	<input id="find-style-1" placeholder="Введите название проекта">
 
 	<section id="buttons">
-		<button id="completed-projects"><a href={% url 'completedProjects' %}>Выполненные проекты</a></button>
-		<button id="create-project">Предложить проект</button>
+		<a class="btn btn-outline-primary shadow-lg" href={% url 'completedProjects' %}>Выполненные проекты</a>
+		<button class="btn btn-outline-info shadow-lg" id="create-project">Предложить проект</button>
 	</section>
 
-	<section id="projects-space">
+	<div class="grid mt-5 mb-5 d-flex">
+        <div class="row gy-3 gx-0 justify-content-around">
 		{% for card in cards%}
-		<a class="project" href="subProjects/{{card.project_id}}">
-			<div class="front hFont">
-			{% if card.mediaExists %}
-				<img class="frontMedia" src= {{card.project_preview.url}}>
-			{% endif %}
-				<div class="frontText">{{card.project_name}}</div>
-			</div>
-			<div class="back">
-				<div class="backContent mFont">{{card.project_description}}</div>
-			</div>
-		</a>
+            <div class="card shadow-lg col-6" style="max-width: 540px;">
+                <div class="row">
+                    <div class="col-md-4">
+                        {% if card.mediaExists %}
+                            <img class="rounded-start img-fluid h-100" src= {{card.project_preview.url}}>
+                        {% endif %}
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">{{card.project_name}}</h5>
+                            <p class="card-text">{{card.project_description}}</p>
+                            <a href="subProjects/{{card.project_id}}" class="btn btn-primary">Изучить проект</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
 		{% endfor %}
-	</section>
+        </div>
+	</div>
 
 	<div class="wrapper">
         <span class="icon-close">
