--- a/Django/CSUProjects/templates/index.html
+++ b/Django/CSUProjects/templates/index.html
@@ -221,7 +221,7 @@
             <h1 class="fs-1 p-2">Есть что предложить нам?</h1>
             <div class="row justify-content-around p-3">
                 <a class="btn btn-primary col-3 rounded-3" href={% url 'completedProjects' %}>Выполненные проекты</a>
-                <button type="button" class="btn btn-primary col-3 rounded-3" data-bs-toggle="modal" data-bs-target="invite-prj">Предложить проект</button>
+                <button type="button" class="btn btn-primary col-3 rounded-3" data-bs-toggle="modal" data-bs-target="#invite-prj">Предложить проект</button>
             </div>
             <p class="fs-6 bg-body-secondary p-4">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur, expedita nemo delectus minus nulla doloribus quo cum mollitia illum adipisci repellat ducimus voluptate quae iusto eius numquam libero ipsam blanditiis omnis molestiae, asperiores sit est. Ipsam consectetur qui, beatae libero quos quidem mollitia harum, commodi ab assumenda consequuntur sint? Illo, eum corrupti facilis voluptas eligendi in, amet dicta eaque soluta vel, dolores alias officia. Non rerum libero architecto vero iusto incidunt impedit. Enim provident, veniam modi minus perferendis corporis. Quos debitis minus sunt quod esse fugit aut consequatur accusamus, perferendis eligendi, asperiores sit voluptatem laudantium tempore eius, quasi voluptatibus provident.
