upd: add section metrics

--- a/Django/CSUProjects/templates/index.html
+++ b/Django/CSUProjects/templates/index.html
@@ -209,9 +209,29 @@
         </div>
     </section>
 
-
-
-    <section>Количество проектов, участников, подпроектов</section>
+    <section>
+        <h1 class="fs-1 mt-4 p-3">Единство Творческих Умов</h1>
+        <div class="container-fluid col-11">
+            <div class="row justify-content-around">
+                <div class="col-5 fs-4">
+                    <p>С гордостью объявляем, что наш хостинг поддерживает целое сообщество талантливых и преданных участников. Мы вдохновляем, обучаем и совершенствуемся вместе, создавая инновационные проекты, которые изменят мир.</p>
+                    <div class="row mt-4">
+                        <span class="col">99+</span>
+                        <span class="col">100K+</span>
+                        <span class="col">32K+</span>
+                    </div>
+                    <div class="row">
+                        <span class="col">Количество участников</span>
+                        <span class="col">Количество проектов</span>
+                        <span class="col">Количество выполненных проектов</span>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <img src={% static "/img/logo-photo.jpg" %} width="60%" height="60%" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
 
     <section>
         <div class="shape shape-bottom shape-fluid-x text-gray-200">
@@ -228,6 +248,7 @@
             </p>
         </div>
     </section>
+    
     <section>
         <div class="container-fluid text-body-secondary bg-primary">
             <h1 class="fs-1 col text-start">Контакты</h1>
