--- a/Django/CSUProjects/templates/index.html
+++ b/Django/CSUProjects/templates/index.html
@@ -91,7 +91,6 @@
         renderer.render(scene, camera);
         });
 
-
     </script>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js" defer></script>
@@ -187,11 +186,11 @@
             <div class="grid mt-4">
                 <div class="row gy-5 gx-0 justify-content-between">
                     {% for card in cards%}
-                    <div class="card shadow-lg col-6 rounded-4 border-2" style="max-width: 540px; max-height: 300px;">
+                    <div class="card shadow-lg col-6 rounded-4 border-2" style="max-width: 540px; height: 240px;">
                         <div class="row">
                             <div class="col-lg-4">
                                 {% if card.mediaExists %}
-                                    <img class="rounded-start-4" style="width: 160px; height: 240px;" src= {{card.project_preview.url}}>
+                                    <img class="rounded-start-4" style="width: 160px; height: 236px;" src= {{card.project_preview.url}}>
                                 {% endif %}
                             </div>
                             <div class="col-lg-8">
