--- a/Django/CSUProjects/templates/index.html
+++ b/Django/CSUProjects/templates/index.html
@@ -113,7 +113,7 @@
 		<div id="title">Проекты ЧелГУ.</div>
 	</section>
 
-    <section>
+    <section id="about us">
         <div class="shape-container shape-line shape-position-top">
             <svg width="2560px" height="100px" fill="#e9ecef" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" x="0px" y="0px" viewBox="0 0 2560 100" style="enable-background:new 0 0 2560 100" xml:space="preserve" class="">
                 <polygon points="2560 0 2560 100 0 100"></polygon>
@@ -130,7 +130,7 @@
         </div>
     </section>
 
-    <section>
+    <section id="benefits">
         <div class="container-fluid mt-4 col-10">
             <div class="row">
                 <div class="col-3 p-4">
@@ -181,7 +181,7 @@
         </div>
     </section>
 
-    <section>
+    <section id="projects">
         <h1 class="fs-1 p-2">Проекты</h1>
         <div class="container">
             <div class="grid mt-4">
@@ -209,7 +209,7 @@
         </div>
     </section>
 
-    <section>
+    <section id="metrics">
         <h1 class="fs-1 mt-4 p-3">Единство Творческих Умов</h1>
         <div class="container-fluid col-11">
             <div class="row justify-content-around">
@@ -233,7 +233,7 @@
         </div>
     </section>
 
-    <section>
+    <section id="buttons">
         <div class="shape shape-bottom shape-fluid-x text-gray-200">
             <svg viewBox="0 0 1440 280" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M2160 0C1440 240 720 240 720 240H0v240h2880V0h-720z" fill="#e9ecef"></path></svg>
         </div>
@@ -248,8 +248,8 @@
             </p>
         </div>
     </section>
-    
-    <section>
+
+    <section id="contacts">
         <div class="container-fluid text-body-secondary bg-primary">
             <h1 class="fs-1 col text-start">Контакты</h1>
             <div class="row justify-content-center">
