upd: index.html

--- a/Django/CSUProjects/templates/index.html
+++ b/Django/CSUProjects/templates/index.html
@@ -196,7 +196,7 @@
                             <div class="col-lg-8">
                                 <div class="card-body">
                                     <h5 class="card-title">{{card.project_name}}</h5>
-                                    <p class="card-text">{{card.project_description}}</p>
+                                    <p class="card-text text-truncate">{{card.project_description}}</p>
                                     <a href="subProjects/{{card.project_id}}" class="btn btn-primary">Изучить проект</a>
                                 </div>
                             </div>
