--- a/Django/CSUProjects/templates/index.html
+++ b/Django/CSUProjects/templates/index.html
@@ -106,7 +106,7 @@
 {% endblock cssAndScripts %}
 
 {% block content %}
-	<section id="preview" class="position-fixed-top">
+	<section id="preview">
 		<canvas id="vortex" width="800" height="300">
         </canvas>
 		<div id="title">Проекты ЧелГУ.</div>
@@ -195,9 +195,29 @@
                             </div>
                             <div class="col-lg-8">
                                 <div class="card-body">
+                                    <span class="d-flex badge justify-content-end">
+                                        <div class="d-flex py-1 px-2 rounded-pill border-1 text-bg-success">
+                                            <div class="px-1">Набор окончен</div>
+                                            <div class="vr mx-1"></div>
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-circle" viewBox="0 0 16 16">
+                                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
+                                                <path d="m10.97 4.97-.02.022-3.473 4.425-2.093-2.094a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05"/>
+                                            </svg>
+                                        </div>
+                                        <div class="d-flex py-1 px-2 rounded-pill border-1 text-bg-danger">
+                                            <div class="px-1">Срочно!</div>
+                                            <div class="vr mx-1"></div>
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-exclamation-circle" viewBox="0 0 16 16">
+                                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
+                                                <path d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0M7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0z"/>
+                                            </svg>
+                                        </div>
+                                    </span>
                                     <h5 class="card-title">{{card.project_name}}</h5>
                                     <p class="card-text text-truncate">{{card.project_description}}</p>
-                                    <a href="subProjects/{{card.project_id}}" class="btn btn-primary">Изучить проект</a>
+                                    <div class="position-absolute bottom-0 py-2 d-flex justify-content-end">
+                                        <a href="subProjects/{{card.project_id}}" class="btn btn-primary">Изучить проект</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
